# coqoban

./: .depend  .travis.yml  Coqoban_engine.v  Coqoban_levels.v  Make  Makefile  README  README.md  _CoqProject  coq-coqoban.opam  default.nix  description  dune-project  meta.yml
.github/workflows/: coq-action.yml  docker-action.yml
theories/: Coqoban_engine.v  Coqoban_levels.v  dune
